plugins { id 'fabric-loom' version '1.14.10'; id 'java-library' }
version = '1.11.8'
group = 'com.cappleapple.astralrepository'
base { archivesName = 'astral_repository-fabric-1.20.1' }
java.toolchain.languageVersion = JavaLanguageVersion.of(17)
repositories {
 maven { url = 'https://maven.jamieswhiteshirt.com/libs-release/' }
 maven { url = 'https://mvn.devos.one/snapshots/' }
 maven { url = 'https://mvn.devos.one/releases/' }
 maven { url = 'https://maven.blamejared.com' }
 maven { url = 'https://maven.terraformersmc.com/releases' }
 maven { url = 'https://api.modrinth.com/maven' }
 maven { url = 'https://maven.ladysnake.org/releases' }
 maven { url = 'https://maven.fzzyhmstrs.me/' }
}
dependencies {
 minecraft 'com.mojang:minecraft:1.20.1'
 mappings loom.officialMojangMappings()
 modImplementation 'net.fabricmc:fabric-loader:0.19.5'
 modImplementation 'net.fabricmc.fabric-api:fabric-api:0.92.12+1.20.1'
 ['config','obj_loader','models','model_generators','transfer','extensions','base'].each { module -> modImplementation include("io.github.fabricators_of_create.Porting-Lib:${module}:2.3.15+1.20.1") }
 modImplementation include('teamreborn:energy:3.0.0')
 modCompileOnly 'dev.emi:emi-fabric:1.1.22+1.20.1:api'
 modCompileOnly 'mezz.jei:jei-1.20.1-fabric-api:15.20.0.112'
 modCompileOnly 'vazkii.patchouli:Patchouli:1.20.1-84.1-FABRIC'
 modCompileOnly 'maven.modrinth:jade:11.13.2+fabric'
}
sourceSets.main.java.exclude 'com/cappleapple/astralrepository/gametest/**'
sourceSets.main.java.exclude 'com/cappleapple/astralrepository/compat/Curios*.java'

tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8'; options.release = 17; options.compilerArgs += ['-Xmaxerrs','1000'] }
processResources { inputs.property 'version', project.version; filesMatching('fabric.mod.json') { expand version: project.version } }

tasks.named('compileJava').configure { doFirst { layout.buildDirectory.file('compile-classpath.txt').get().asFile.text = classpath.asPath } }


dependencies {testImplementation platform('org.junit:junit-bom:5.11.4');testImplementation 'org.junit.jupiter:junit-jupiter';testImplementation 'org.junit.platform:junit-platform-launcher'}
tasks.named('test', Test).configure { useJUnitPlatform(); maxHeapSize='2G' }
loom { runs { server { server(); runDir 'run-server'; programArg '--nogui' } } }

sourceSets.main.java.exclude 'com/cappleapple/astralrepository/porttest/**'

sourceSets { portTest { compileClasspath += sourceSets.main.output + sourceSets.main.compileClasspath; runtimeClasspath += sourceSets.main.output + sourceSets.main.runtimeClasspath } }
loom { mods { astral_repository {sourceSet sourceSets.main}; astral_repository_port_test {sourceSet sourceSets.portTest} }; runs { serverSmoke {server(); name 'Fabric dedicated smoke'; runDir 'run-server-smoke'; vmArg '-Dastral_repository.portSmoke=true'; source sourceSets.portTest; programArg '--nogui' } } }

loom { runs { clientSmoke {client(); name 'Fabric background client smoke'; runDir 'run-client-smoke'; source sourceSets.portTest; vmArg '-Dastral_repository.testClient=true'; vmArg '-Dastral_repository.portClientSmoke=true' } } }

tasks.named('jar') { from('LICENSE') }

tasks.named('jar') { from('LICENSE') }
